--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="btn btn-dark" href="#" role="button">
-        
-      </div>
-    </div>
+         <div class="row">
+           <div class="col-md-4">
+             <app-csgo></app-csgo>
+           </div>
+         </div>
+         <div class="row">
+          <div class="col-md-4">
+            <app-dota></app-dota>
+          </div>
+        </div>  
+        <div class="row">
+          <div class="col-md-4">
+            <app-lol></app-lol>
+          </div>
+        </div>          
   </div>
-</div>
