--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,13 @@
-<div class="container">
+<div class="container-fluid">
          <div class="row">
-           <div class="col-md-4">
-             <app-csgo></app-csgo>
+           <div class="col-md-4 nopadding">
+             <app-csgo class=""></app-csgo>
            </div>
-         </div>
-         <div class="row">
-          <div class="col-md-4">
+           <div class="col-md-4 nopadding">
             <app-dota></app-dota>
           </div>
-        </div>  
-        <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 nopadding">
             <app-lol></app-lol>
           </div>
-        </div>          
+         </div>
   </div>
