images-transitions added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
          <div class="row">
            <div class="col-md-4 nopadding">
-             <app-csgo class=""></app-csgo>
+             <app-csgo></app-csgo>
            </div>
            <div class="col-md-4 nopadding">
             <app-dota></app-dota>
