--- a/src/app/dota/dota.component.html
+++ b/src/app/dota/dota.component.html
@@ -1,1 +1,3 @@
-<div class="blocktest"><p class="text-center" style="color:white;">dota works!</p></div> 
+<div class="blocktest"><p class="textstyle">dota works!</p>
+    <div class="imageCS blur"  alt="cs:go | Eesports"></div>
+</div> 
