--- a/src/app/lol/lol.component.html
+++ b/src/app/lol/lol.component.html
@@ -1,1 +1,3 @@
-<div class="blocktest"><p class="text-center">lol works!</p></div> 
+<div class="blocktest"><p class="textstyle">lol works!</p>
+    <div class="imageCS blur"  alt="cs:go | Eesports"></div>
+</div> 
