--- a/src/app/lol/lol.component.css
+++ b/src/app/lol/lol.component.css
@@ -1,5 +1,31 @@
 .blocktest{
     width:100%;
     height:100vh;
-    background-color:aquamarine ;
+}
+.imageCS{
+    background: url('../../assets/lol.jpg') no-repeat center center; 
+    width:100%;
+    height:100%;
+    background-size: cover;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    transition:500ms ease-in;
+    cursor: pointer;
+}
+.blur{
+         filter: grayscale(50%);
+}
+.imageCS:hover{
+          transition:500ms ease-out;
+          transform: scale(1.1);
+          filter: grayscale(0%);
+}
+.textstyle{
+    color:white;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    z-index: 99;
 }
