--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,2 @@
-<div class="container-fluid">
-         <div class="row">
-           <div class="col-md-4 nopadding">
-             <app-csgo></app-csgo>
-           </div>
-           <div class="col-md-4 nopadding">
-            <app-dota></app-dota>
-          </div>
-          <div class="col-md-4 nopadding">
-            <app-lol></app-lol>
-          </div>
-         </div>
-  </div>
+  <app-home-router></app-home-router>
+
