--- a/src/app/dota/dota.component.html
+++ b/src/app/dota/dota.component.html
@@ -1,3 +1,3 @@
 <div class="blocktest"><p class="textstyle">dota works!</p>
-    <div class="imageCS blur"  alt="cs:go | Eesports"></div>
+    <div class="imageCS blur"  alt="cs:go | Eesports"  routerLink="dota"></div>
 </div> 
