--- a/src/app/home-router/home-router.component.html
+++ b/src/app/home-router/home-router.component.html
@@ -1,14 +1,14 @@
+<app-header></app-header>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4 nopadding">
-      <app-csgo></app-csgo>
+      <app-csgo routerLink="csgo"></app-csgo>
     </div>
     <div class="col-md-4 nopadding">
-     <app-dota></app-dota>
+     <app-dota routerLink="dota"></app-dota>
    </div>
    <div class="col-md-4 nopadding">
-     <app-lol></app-lol>
+     <app-lol routerLink="lol"></app-lol>
    </div>
   </div>
-  
 </div>
