--- a/src/app/lol/lol.component.html
+++ b/src/app/lol/lol.component.html
@@ -1,3 +1,4 @@
-<div class="blocktest"><p class="textstyle">lol works!</p>
-    <div class="imageCS blur"  alt="cs:go | Eesports"  routerLink="lol"></div>
+<div class="blocktest">
+    <p class="textstyle" routerLink="">Go back</p>
+    <div class="imageCS blur"  alt="cs:go | Eesports"></div>
 </div> 
