--- a/src/app/csgo/csgo.component.css
+++ b/src/app/csgo/csgo.component.css
@@ -29,7 +29,7 @@
 .textstyle{
     color:white;
     position: absolute;
-    text-align: center;
+    text-align: left;
     width: 100%;
     z-index: 99;
 }
