--- a/src/app/csgo/csgo.component.html
+++ b/src/app/csgo/csgo.component.html
@@ -1,5 +1,5 @@
 
- <div class="blocktest"><p class="textstyle">csgo works!</p>
-  <div class="imageCS blur"  alt="cs:go | Eesports"  routerLink="csgo"></div>
-</div> 
-
+ <div class="blocktest">
+  <p class="textstyle" routerLink="">Go back</p>
+  <div class="imageCS blur"  alt="cs:go | Eesports"></div>
+</div>
