--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
-<p>
-  header works!
-</p>
+<header>
+    <nav>
+      <a routerLink="">home</a>
+      <a routerLink="csgo">csgo</a>
+      <a routerLink="dota">dota</a>
+      <a routerLink="lol">lol</a>
+    </nav>
+</header>
