--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,18 @@
 <header>
-    <nav>
-      <a routerLink="">home</a>
-      <a routerLink="csgo">csgo</a>
-      <a routerLink="dota">dota</a>
-      <a routerLink="lol">lol</a>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" routerLink="">Everything e-sports</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <a class="nav-item nav-link active" routerLink="">home</a>
+            <a class="nav-item nav-link" routerLink="csgo">csgo</a>
+            <a class="nav-item nav-link" routerLink="dota">dota</a>
+            <a class="nav-item nav-link" routerLink="lol">lol</a>
+        <ul class="navbar-nav navbar-right">
+            <a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+            <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+        </ul>
+      </div>
     </nav>
 </header>
