add jquery to node_modules to function nav

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,15 @@
 <header>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" routerLink="">Everything e-sports</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <a class="nav-item nav-link active" routerLink="">home</a>
-            <a class="nav-item nav-link" routerLink="csgo">csgo</a>
-            <a class="nav-item nav-link" routerLink="dota">dota</a>
-            <a class="nav-item nav-link" routerLink="lol">lol</a>
+            <a class="nav-item nav-link" [ngClass]="{'active':routerLink === 'home'}" routerLink="">home</a>
+            <a class="nav-item nav-link" [ngClass]="{'active':routerLink === 'csgo'}" routerLink="csgo">csgo</a>
+            <a class="nav-item nav-link" [ngClass]="{'active':routerLink === 'dota'}" routerLink="dota">dota</a>
+            <a class="nav-item nav-link" [ngClass]="{'active':routerLink === 'lol'}"  routerLink="lol">lol</a>
+           
         <ul class="navbar-nav navbar-right">
             <a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
             <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
