--- a/src/app/home-router/csgo/csgo.component.css
+++ b/src/app/home-router/csgo/csgo.component.css
@@ -4,7 +4,7 @@
     overflow: hidden;
 }
 .imageCS{
-    background: url('../../assets/cs.jpg') no-repeat center center; 
+    background: url('../../../assets/cs.jpg') no-repeat center center; 
     width:100%;
     height:100%;
     background-size: cover;
@@ -15,6 +15,18 @@
     transition:500ms ease-in;
     cursor: pointer;
 }
+
+.imageCSnoA{
+    background: url('../../../assets/cs.jpg') no-repeat center center; 
+    width:100%;
+    height:100%;
+    background-size: cover;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+}
+
 .blur{
          filter: grayscale(50%);
 }
