fixed back button

--- a/src/app/home-router/csgo/csgo.component.html
+++ b/src/app/home-router/csgo/csgo.component.html
@@ -1,4 +1,4 @@
    <div class="blocktest">
-     <p class="textstyle" routerLink="">Go back</p>
+     <p *ngIf="router.url === '/csgo'" class="textstyle" routerLink="">Go back</p>
      <div [ngClass]="router.url === '/csgo' ? 'imageCSnoA' : 'imageCS'" class="blur"  alt="cs:go | Eesports"></div>
 </div>
