--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,12 +5,11 @@
             <span class="navbar-toggler-icon"></span>
           </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <a class="nav-item nav-link" [ngClass]="{activeSelected:!routerLink}" routerLink="">Home</a>
-            <a class="nav-item nav-link" [ngClass]="{activeSelected:routerLink === 'csgo'}" routerLink="csgo">CS:GO</a>
-            <a class="nav-item nav-link" [ngClass]="{activeSelected:routerLink === 'dota'}" routerLink="dota">Dota 2</a>
-            <a class="nav-item nav-link" [ngClass]="{activeSelected:routerLink === 'lol'}" routerLink="lol">League of Legends</a>
-           
-        <ul class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" [ngClass]="router.url === '/' ? 'activeSelected' : 'none'" routerLink="">Home</a>
+            <a class="nav-item nav-link" [ngClass]="router.url === '/csgo' ? 'activeSelected' : 'none'" routerLink="csgo">CS:GO</a>
+            <a class="nav-item nav-link" [ngClass]="router.url === '/dota' ? 'activeSelected' : 'none'"routerLink="dota">Dota 2</a>
+            <a class="nav-item nav-link" [ngClass]="router.url === '/lol'  ? 'activeSelected' : 'none'"routerLink="lol">League of Legends</a>
+            <ul class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="#"> <i class="fas fa-user-plus"></i> Sign up</a>
             <a class="nav-item nav-link" href="#"> <i class="fas fa-lock"></i> Login</a>
         </ul>
