--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" routerLink="">Everything e-sports</a>
+        <a class="navbar-brand" *ngIf="router.url === '/'" routerLink="">Everything e-sports</a>
+        <a class="navbar-brand" *ngIf="router.url === '/csgo'" routerLink="">CS:GO</a>
+        <a class="navbar-brand" *ngIf="router.url === '/dota'" routerLink="">Dota</a>
+        <a class="navbar-brand" *ngIf="router.url === '/lol'" routerLink="">Leage of Legends</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
