--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <a class="nav-item nav-link" [ngClass]="router.url === '/' ? 'activeSelected' : 'none'" routerLink="">Home</a>
-            <a class="nav-item nav-link" [ngClass]="router.url === '/csgo' ? 'activeSelected' : 'none'" routerLink="csgo">CS:GO</a>
-            <a class="nav-item nav-link" [ngClass]="router.url === '/dota' ? 'activeSelected' : 'none'" routerLink="dota">Dota 2</a>
-            <a class="nav-item nav-link" [ngClass]="router.url === '/lol'  ? 'activeSelected' : 'none'" routerLink="lol">League of Legends</a>
+            <a class="nav-item nav-link" [ngClass]="router.url === '/'  ? 'activeSelected' : 'none'"  routerLink="">Home</a>
+            <a class="nav-item nav-link" routerLinkActive="activeSelected" routerLink="csgo">CS:GO</a>
+            <a class="nav-item nav-link" routerLinkActive="activeSelected"  routerLink="dota">Dota 2</a>
+            <a class="nav-item nav-link" routerLinkActive="activeSelected"  routerLink="lol">League of Legends</a>
             <ul class="navbar-nav ml-auto">
 
                 <ng-template [ngIf]="!authService.isAuthenticated()">
