--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -3,17 +3,21 @@
   <br>
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 ml-auto mr-auto">
-      <form (ngSubmit)="onSignup(f)" #f="ngForm">
+      <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
         <div class="form-group">
           <label for="email">Email</label>
-          <input class="form-control" type="email" id="email" name="email" ngModel>
+          <input formControlName="email" class="form-control" type="email" id="email" name="email">
+          <small class="form-text text-muted" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Please enter a valid email</small>
         </div>
         <div class="form-group">
-          <label for="password">Enail</label>
-          <input class="form-control" type="password" id="password" name="password" ngModel>
+          <label for="password">Password</label>
+          <input formControlName="password" class="form-control" type="password" id="password" name="password">
+          <small class="form-text text-muted" *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">Password must be atleast 6 letters/digits</small>
         </div>
         <button class="btn btn-dark" type="button" type="submit">Sign Up</button>
       </form>
+   
+    
     </div>
   </div>
 </div>
