--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,16 +4,18 @@
     <h2>Login page</h2>
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 ml-auto mr-auto">
-        <form (ngSubmit)="onLogin(f)" #f="ngForm">
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
           <div class="form-group">
             <label for="email">Email</label>
-            <input class="form-control" type="email" id="email" name="email" ngModel>
+            <input formControlName="email"  class="form-control" type="email" id="email" name="email">
+            <small class="form-text text-muted" *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">Please enter a valid email</small>
+
           </div>
           <div class="form-group">
-            <label for="password">Enail</label>
-            <input class="form-control" type="password" id="password" name="password" ngModel>
+            <label for="password">Password</label>
+            <input formControlName="password" class="form-control" type="password" id="password" name="password">
           </div>
-          <button type="button" type="submit" class="btn btn-dark">Login</button>
+          <button  type="button" type="submit" class="btn btn-dark">Login</button>
         </form>
       </div>
     </div>
