--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,7 +7,9 @@
         <div class="form-group">
           <label for="email">Email</label>
           <input formControlName="email" class="form-control" type="email" id="email" name="email">
+          <span>
           <small class="form-text text-muted" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Please enter a valid email</small>
+        </span>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
