--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,17 +6,20 @@
       <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
         <div class="form-group">
           <label for="email">Email</label>
-          <input formControlName="email" class="form-control" type="email" id="email" name="email">
+          <input formControlName="email" class="form-control" type="email" id="email" name="email" [(ngModel)]="userEmail">
           <span>
-          <small class="form-text text-muted" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Please enter a valid email</small>
+          <small class="form-text text-muted" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Please enter a valid email.
+           <br>
+            <small *ngIf="signupForm.get('email').errors['emailIsForbidden']">The email address is already in use by another account.</small>
+          </small>
         </span>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input formControlName="password" class="form-control" type="password" id="password" name="password">
+          <input formControlName="password" class="form-control" type="password" id="password" name="password" [(ngModel)]="userPassword">
           <small class="form-text text-muted" *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">Password must be atleast 6 letters/digits</small>
         </div>
-        <button class="btn btn-dark" type="button" type="submit">Sign Up</button>
+        <button class="btn btn-dark" [disabled]="userEmail === '' && userPassword === ''" type="button" type="submit">Sign Up</button>
       </form>
    
     
