--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <br>
-    <h2>Login page</h2>
+ 
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 ml-auto mr-auto">
         <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
@@ -15,7 +15,7 @@
             <label for="password">Password</label>
             <input formControlName="password" class="form-control" type="password" id="password" name="password">
           </div>
-          <button  type="button" type="submit" class="btn btn-dark">Login</button>
+          <button  type="button" type="submit" class="btn btn-dark btn-lg btn-block">Login</button>
         </form>
       </div>
     </div>
