--- a/src/app/auth/login/userprofile/userprofile.component.html
+++ b/src/app/auth/login/userprofile/userprofile.component.html
@@ -7,35 +7,24 @@
             <Br><Br>
                 <input type="file" class="form-control-file" id="exampleFormControlFile1">
           </div>
-        <form [formGroup]="ProfileForm" (ngSubmit)="onSave()">
-          <h3 class="text-center" style="position: relative;
-          top: -12vh;">Edit profile</h3>
+        <form #profileForm="ngForm" (ngSubmit)="onSave(profileForm)">
           <br>
-        
             <div class="form-group row">
                 <label for="inputName" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
-                  <input formControlName="name" type="text" class="form-control" id="inputName" placeholder="Name">
+                  <input type="text" class="form-control" id="inputName" name="name" #name="ngModel" required [(ngModel)]="usersSrv.selectedUser.name" placeholder="Name">
                 </div>
               </div>
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
               <div class="col-sm-10">
-                <input formControlName="email" type="email" class="form-control" id="inputEmail3" placeholder="Email" value="{{info.email}}">
-                <small class="form-text text-muted" *ngIf="!ProfileForm.get('email').valid && ProfileForm.get('email').touched">Please enter a valid email.</small>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input formControlName="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                <small class="form-text text-muted" *ngIf="!ProfileForm.get('password').valid && ProfileForm.get('password').touched">Password must be atleast 6 letters/digits</small>
+                <input  type="email" class="form-control" id="inputEmail3" name="email" #name="ngModel" required [(ngModel)]="usersSrv.selectedUser.email" placeholder="Email" value="{{info.email}}">
               </div>
             </div>
       <br>
             <div class="form-group row">
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <button type="submit" class="btn btn-dark btn-lg btn-block">Save</button>
+                <button [disabled]="!profileForm.valid" type="submit" class="btn btn-dark btn-lg btn-block">Save</button>
               </div>
             </div>
           </form>
