--- a/src/app/home-router/csgo/csgo.component.css
+++ b/src/app/home-router/csgo/csgo.component.css
@@ -1,7 +1,7 @@
 .blocktest{
     width:100%;
-    height:100vh;
-    overflow: hidden;
+    height:100%;
+   
 }
 .imageCS{
     background: url('../../../assets/cs.jpg') no-repeat center center; 
