--- a/src/app/home-router/csgo/csgo.component.html
+++ b/src/app/home-router/csgo/csgo.component.html
@@ -1,41 +1,11 @@
 <div class="blocktest">
-    <div [ngClass]="router.url === '/csgo' ? 'imageCSnoA' : 'imageCS'" class="blur"  alt="cs:go | Eesports">
+    <div [ngClass]="router.url === '/csgo' ? 'imageCSnoA' : 'imageCS'" class="blur" alt="cs:go | Eesports">
         <div *ngIf="router.url === '/csgo'" class="content">
-    <div class="row">
-        <div class="col-md-4">
-                <table class="table table-sm table-hover table-dark text-center">
-                        <thead>
-                          <tr class="text-center">
-                                
-                            <th scope="col" colspan="5" style="color: #80aad4;">Recent matches</th>
-                          
-                                
-                          </tr>
-                        </thead>
-                      
-                        <tbody>
-                          <tr *ngFor="let post of _postArrayResults | paginate: { itemsPerPage: 5, currentPage: p }">
-                              <td><img src="https://static.hltv.org/images/team/logo/{{post.team1.id}}" width="20px" height="20px" alt="{{post.team1.name}}"></td>
-                            <td><span style="font-size:12px;">{{post.team1.name}}</span> </td>
-                            <td><span style="font-weight: 700;font-size:12px;" [ngStyle]=""> {{post.result | slice:0:2}}</span> - 
-                                <span style="font-weight: 700;font-size:12px;" [ngStyle]=""> {{post.result | slice:4:7}} </span>
-                            </td>
-                            <td> <img src="https://static.hltv.org/images/team/logo/{{post.team2.id}}" width="20px" height="20px" alt="{{post.team2.name}}"> </td>
-                            <td><span style="font-size:12px;">{{post.team2.name}}</span></td>
-                          </tr>
-                      
-                        </tbody>
-                     
-                       
-                      </table>
-                      <pagination-controls class="my-pagination" maxSize="3" (pageChange)="p = $event"></pagination-controls>
-        </div>
-    </div>
-                
-             
-          
-               
-           
+            <div class="row">
+                <div class="col-md-4">
+                          asdasdas
+                </div>
+            </div>
         </div> <!--CONtENT-->
     </div>
 </div>
