--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,134 @@ router-outlet ~ * {
 .movebtn{
   position: absolute;
 }
+
+.blocktest{
+  width:100%;
+  height:100%;
+ 
+}
+.table td {
+  text-align: center;   
+}
+.imageCS{
+  background: url('../src/assets/cs.jpg') no-repeat center center; 
+  width:100%;
+  height:100%;
+  background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  transition:500ms ease-in;
+  cursor: pointer;
+}
+
+.imageCSnoA{
+  background: url('../src/assets/cs.jpg') no-repeat center center; 
+  width:100%;
+  height:auto;
+  background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  object-fit:cover;
+}
+
+.blur{
+       filter: grayscale(50%);
+}
+
+.imageCS:hover{
+        transition:500ms ease-out;
+        transform: scale(1.1);
+        filter: grayscale(0%);
+       
+  
+}
+.textstyle{
+  color:white;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+  z-index: 99;
+}
+
+.content{
+  margin-right: 8%;
+  margin-left: 8%;
+  background-color: #181b1f;
+  height: auto;
+  min-height: 100vh;
+  opacity: 0.98;
+}
+
+.my-pagination /deep/ .ngx-pagination .current {
+  background: #343a40;
+}
+
+
+
+.my-pagination /deep/ .ngx-pagination a, .ngx-pagination button {
+  color: white;
+  display: block;
+  padding: 0.1875rem 0.625rem;
+  border-radius: 0;
+}
+.my-pagination /deep/ .ngx-pagination a, .ngx-pagination button:hover {
+background-color:#343a40;
+}
+
+.my-pagination /deep/ .ngx-pagination {
+
+}
+
+.textShrink {
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size:12px;
+}
+
+.team1{
+  justify-content: flex-end;
+}
+
+.team1 img{
+  margin-left: 8px;
+}
+
+.team2{
+  justify-content: flex-start;
+}
+
+.team2 img{
+  margin-right: 8px;
+}
+
+.name-align{
+  width:25%;
+}
+
+.items-align{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-width: 1%;
+}
+
+.resultScore{
+  width: 50px;
+  font-weight: 700;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.event{
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+}
+
