--- a/src/app/home-router/csgo/cs-results/cs-results.component.html
+++ b/src/app/home-router/csgo/cs-results/cs-results.component.html
@@ -39,6 +39,7 @@
                                 <td class="textShrink">
                                     <span>{{post.event.name}}</span>
                                 </td>
+                                <input id="matchId" type="hidden" value="{{post.id}}">
                             </tr>
 
                         </tbody>
